@@ -1,3 +1,5 @@
+* Fix `of-type` selectors when no context is given by removing the `indexesByTag` cache. [Diego Perini]
+
 * Make `RE_BUGGY_QSAPI` filter out selectors that cause IE to throw errors. [jddalton]
 
 * Fix a bug in the compiler for a selector like `.a1 ~ *` throwing an error when the W3C element traversal api is supported. [jddalton]
